create sync from local

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/*
-Theme Name:  FerinaBatik Themes
-Theme URI:   https://github.com/pradesga/ferina-themes/
-Description: Premium e-commerce wordpress themes for ferina batik
-Version:     1.2
-Author:      Pradesga Indonesia
-Author URI:  http://www.pradesga.com/
-License:     GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+/*
+Theme Name:  FerinaBatik Themes
+Theme URI:   http://www.pradesga.com
+Description: Premium e-commerce wordpress themes for ferina batik
+Version:     1.2
+Author:      Pradesga Indonesia
+Author URI:  http://www.pradesga.com/
+License:     GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
